# Distributed-Computing---Gossip-Algorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  parse_bench_out.cpp
bench_pull/: out_pull.N_10.PK_20.P_0  out_pull.N_10.PK_20.P_10  out_pull.N_10.PK_20.P_50  out_pull.N_10.PK_50.P_0  out_pull.N_10.PK_50.P_10  out_pull.N_10.PK_50.P_50  out_pull.N_5.PK_20.P_0  out_pull.N_5.PK_20.P_10  out_pull.N_5.PK_20.P_50  out_pull.N_5.PK_50.P_0  out_pull.N_5.PK_50.P_10  out_pull.N_5.PK_50.P_50  out_pull.N_6.PK_20.P_0  out_pull.N_6.PK_20.P_10  out_pull.N_6.PK_20.P_50  out_pull.N_6.PK_50.P_0  out_pull.N_6.PK_50.P_10  out_pull.N_6.PK_50.P_50  out_pull.N_7.PK_20.P_0  out_pull.N_7.PK_20.P_10  out_pull.N_7.PK_20.P_50  out_pull.N_7.PK_50.P_0  out_pull.N_7.PK_50.P_10  out_pull.N_7.PK_50.P_50  out_pull.N_8.PK_20.P_0  out_pull.N_8.PK_20.P_10  out_pull.N_8.PK_20.P_50  out_pull.N_8.PK_50.P_0  out_pull.N_8.PK_50.P_10  out_pull.N_8.PK_50.P_50  out_pull.N_9.PK_20.P_0  out_pull.N_9.PK_20.P_10  out_pull.N_9.PK_20.P_50  out_pull.N_9.PK_50.P_0  out_pull.N_9.PK_50.P_10  out_pull.N_9.PK_50.P_50
bench_push/: out_push.N_10.PK_20.P_0  out_push.N_10.PK_20.P_50  out_push.N_10.PK_50.P_0  out_push.N_10.PK_50.P_10  out_push.N_10.PK_50.P_50  out_push.N_5.PK_20.P_10  out_push.N_5.PK_20.P_50  out_push.N_5.PK_50.P_0  out_push.N_5.PK_50.P_10  out_push.N_6.PK_20.P_0  out_push.N_6.PK_20.P_10  out_push.N_6.PK_20.P_50  out_push.N_6.PK_50.P_50  out_push.N_7.PK_20.P_0  out_push.N_7.PK_20.P_10  out_push.N_7.PK_20.P_50  out_push.N_7.PK_50.P_0  out_push.N_7.PK_50.P_10  out_push.N_7.PK_50.P_50  (+12 more)
(+15 files in other folders)
